# AIcoro

./: .cursorrules  .gitignore  CODE_VIEWER_GUIDE.md  DEPLOYMENT.md  README.md  USER_GUIDE.md  demo_setup.py  docker-compose.yml  index.html  test_system.py  开发日志.md
PPTAgent-0.2.0/: .gitignore  DOC.md  (+4 more)
backend/: .env  Dockerfile  pyproject.toml  run.py
backend/src/: auth.py  chat_service.py  config.py  database.py  main.py  memory_db.py  models.py
backend/src/ai_code_agent/: agent.py
backend/src/ai_code_agent/047085bd-a536-4f5a-a253-1ff641f70f18/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758161450.7461033/: print_qwe.py
backend/src/ai_code_agent/0f07ebc6-7d7a-4761-a4b0-ea4b21c4ecb6/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758147379.010445/: quicksort.py
backend/src/ai_code_agent/12015c2b-9565-4e29-973f-60b5b44cc748/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758163161.1656148/: print_edc.py
backend/src/ai_code_agent/1bd54a44-c8f7-4673-ae62-92eb193e89b0/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758152389.375823/: hello.py
backend/src/ai_code_agent/247a23d6-6e72-461a-8608-094649f08ab7/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758146602.6533616/: quicksort.py
backend/src/ai_code_agent/2b0ea500-e971-41a4-b2da-1bfa7f99a045/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758159585.7784884/: main.py
backend/src/ai_code_agent/2f5ebfbd-e7f1-4419-aeba-01414d7570dd/_3c3141c0-3cde-4701-b187-8f14ae2b8060_dir_1758161438.8729124/: print_123.py
backend/src/routers/: auth.py  chat.py  code.py
research_agent/: .env  README.md  main.py  pyproject.toml  research_agent.py
(+69 files in other folders)
